got the jump riccati LQR working